<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Inventory</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="Overview">Overview</string>
    <string name="Inventory">Inventory</string>
    <string name="product_name">product Name</string>
    <string name="Description">Description</string>
    <string name="price">0 $</string>
    <string name="product_price">product Price</string>
    <string name="product_quantity">product Quantity</string>
    <string name="_0_products">0 products</string>
    <string name="make_order">make Order</string>
    <string name="warning_message_0_product">you can\'t have less than 0 product</string>
    <string name="order_subject_message">Order from inventory</string>
    <string name="log_closing_parcel_file">getImage: error while closing parcel file descriptor</string>
    <string name="log_loading_image">getImage: error while loading image</string>
    <string name="error_while_adding">error while adding</string>
    <string name="data_added">data added</string>
    <string name="fill_required_filled">Please fill out required filed</string>
    <string name="sale">sale</string>
    <string name="product_description">Product Description</string>
    <string name="empty_description">Please, press on the button on the right bottom to add new product in the inventory</string>
    <string name="delete_dialog_message">Are you sure that you want to delete this item?</string>
    <string name="delete_item">Delete an item</string>
    <string name="cancel">Cancel</string>
    <string name="quantity_updated">quantity updated</string>
    <string name="can_not_update_quantity">can\'t update quantity</string>
    <string name="can_not_make_order">can\'t make order</string>
    <string name="product">Products</string>
    <string name="quantity_updataed">quantity updated</string>
    <string name="Quantity">Quantity :</string>
    <string name="price_list_view">$</string>
    <string name="Name">Name :</string>
    <string name="error_in_loading">Error while loading image:</string>
    <string name="error_closing_parcel_file">can\'t close parcel file descriptor</string>
</resources>
