<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context="com.example.gorgesamir.inventory.ItemEditor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/InventoryStyle"
            android:text="@string/product_name" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <TextView
                android:id="@+id/product_name_text_view"
                style="@style/FieldStyle"
                android:hint="@string/product_name"
                android:inputType="textCapWords"
                android:padding="15dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/InventoryStyle"
            android:text="@string/product_description" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <TextView
                android:id="@+id/product_description_text_view"
                style="@style/FieldStyle"
                android:hint="@string/Description"
                android:inputType="textCapWords"
                android:padding="15dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/InventoryStyle"
            android:text="@string/product_price" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/product_price_text_view"
                style="@style/FieldStyle"
                android:hint="@string/price"
                android:inputType="number"
                android:padding="15dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/InventoryStyle"
            android:text="@string/product_quantity" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/product_increment_edit_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:src="@drawable/icons8_plus_math_50" />

            <ImageButton
                android:id="@+id/product_decrement_edit_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:src="@drawable/icons8_minus_50" />
        </LinearLayout>

        <TextView
            android:id="@+id/product_quantity_text_view"
            style="@style/UnitsStyle"
            android:text="@string/_0_products" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/InventoryStyle"
            android:text="@string/save" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/edit_save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icons8_save_50" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/InventoryStyle"
            android:text="@string/make_order"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/order_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icons8_shopping_cart_50" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/InventoryStyle"
            android:text="@string/delete"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/edit_delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icons8_cancel_filled_50" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
